grml-etc (1.1.5) unstable; urgency=low

  * Get rid of dependency from grml-autoconfig (on request from gebi).
  * Drop empty and unused /etc/zsh directory from debian/dirs.
  * Bump Standard-Version to 3.8.0 (no further changes).

 -- Michael Prokop <mika@grml.org>  Thu, 31 Jul 2008 22:23:32 +0200

grml-etc (1.1.4) unstable; urgency=low

  * /etc/init.d/grml-reboot: check for nfsroot (and keep check
    for nfsdir as well to avoid breaking any existing scripts).
    Thanks for reporting to Wolfgang Karall and thanks for the
    test case to Jimmy.

 -- Michael Prokop <mika@grml.org>  Tue, 20 May 2008 01:28:51 +0200

grml-etc (1.1.3) unstable; urgency=low

  * /etc/init.d/grml-reboot: put reboot + halt binaries to
    the filesystem cache [Testing: issue384]
  * /etc/init.d/grml-reboot: rework umounting and network
    shutdown sequences so filesystems are unmounted also
    when booting via NFS [Testing: issue434]

 -- Michael Prokop <mika@grml.org>  Mon, 10 Mar 2008 18:46:23 +0100

grml-etc (1.1.2) unstable; urgency=low

  * Try to work around dpkg-divert issues with missing files.

 -- Michael Prokop <mika@grml.org>  Mon, 04 Feb 2008 15:32:27 +0100

grml-etc (1.1.1) unstable; urgency=low

  * Fix the "grml 1.1-rc1 does not open the CD-ROM tray on reboot/halt"
    issue. Thanks to Josef Teske and several other bugreporters for
    reporting this issue. [Closes: issue370]

 -- Michael Prokop <mika@grml.org>  Mon, 14 Jan 2008 20:31:38 +0100

grml-etc (1.1.0) unstable; urgency=low

  * A new stable release is coming. :)
  * Bump Standard-Version to 3.7.3 (no further changes).

 -- Michael Prokop <mika@grml.org>  Fri, 28 Dec 2007 00:05:25 +0100

grml-etc (1.0.24) unstable; urgency=low

  * /etc/init.d/grml-reboot: adjust for new live-initramfs layout.

 -- Michael Prokop <mika@grml.org>  Fri, 16 Nov 2007 11:38:03 +0100

grml-etc (1.0.23) unstable; urgency=low

  [ Michael Gebetsroither ]
  * /etc/inittab: switched to grml-init-multitail
