@@ -30,12 +30,11 @@ install: build
 	# Add here commands to install the package into debian/grml-etc.
 	cp -a etc/                       debian/grml-etc/
 
-# Build architecture-independent files here.
-binary-indep: build install
-# We have nothing to do by default.
-
 # Build architecture-dependent files here.
 binary-arch: build install
+
+# Build architecture-independent files here.
+binary-indep: build install
 	dh_testdir
 	dh_testroot
 	dh_installchangelogs 
